--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root { 
@@ -5231,6 +5230,16 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 .layout-tv #itemDetailPage:has([data-type="BoxSet"]) .collectionItems {
   position: relative;
   max-height: unset;
+}
+
+.layout-desktop .itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-wrap .card.backdropCard.card-hoverable.card-withuserdata,
+.layout-tv .itemsContainer.padded-left.padded-right.itemsContainer-tv.padded-right-withalphapicker.vertical-wrap .card.backdropCard.show-focus.show-animation.card-withuserdata {
+  width: 15.75%;
+}
+
+.layout-desktop .itemsContainer.padded-left.padded-right.padded-right-withalphapicker.vertical-wrap .card.bannerCard,
+.layout-tv .itemsContainer.padded-left.padded-right.itemsContainer-tv.padded-right-withalphapicker.vertical-wrap .card.bannerCard {
+  width: 24.15%;
 }
 
 /* --------------- MOBILE --------------- */
