Adjust width of list items in preferences menu

--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -2018,6 +2018,7 @@ button.is-emby-button emby-button {
 #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItem {
   justify-content: center;
   overflow: visible;
+  width: 70%;
 }
 
 #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemBody {
